Fixed overflow problems

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@ html{
 
 body{
   font-family: $sans-serif;
+  overflow: hidden;
 }
 
 
@@ -203,6 +204,32 @@ body{
     border-style: solid;
     padding:15px;
     border-color: $pink;
+  }
+
+  #gradient{
+    z-index: 0;
+    position: fixed;
+    top:0;
+    left:0;
+    height:100%;
+    width:1050px;
+    background: rgba(255,255,255,1);
+    background: -moz-linear-gradient(left, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(1%, rgba(255,255,255,1)), color-stop(48%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,0)));
+    background: -webkit-linear-gradient(left, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
+    background: -o-linear-gradient(left, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
+    background: -ms-linear-gradient(left, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(to right, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+  }
+
+  #sketch{
+    z-index: -100;
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:1vh;
   }
 
 
